--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.8.0",
     "react-id-swiper": "^4.0.0",
     "react-slick": "^0.29.0",
+    "sharp": "^0.32.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.2.4"
   },
