--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^1.0.6",
     "js-cookie": "^3.0.1",
     "next": "12.1.5",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.0.0",
