--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^1.0.6",
+    "crypto-js": "^4.1.1",
     "js-cookie": "^3.0.1",
     "next": "12.1.5",
     "next-transpile-modules": "^10.0.0",
