--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^1.0.6",
     "crypto-js": "^4.1.1",
+    "es6-promise": "^4.2.8",
     "js-cookie": "^3.0.1",
     "next": "12.1.5",
     "next-transpile-modules": "^10.0.0",
